--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -26,7 +26,11 @@ jobs:
       - name: Launch EC2 instance
         id: ec2
         run: |
-          sudo apt-get update && sudo apt-get install -y awscli jq
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
           INSTANCE_ID=$(aws ec2 run-instances \
             --image-id ami-0c94855ba95c71c99 \
             --instance-type t2.micro \
